--- a/html/gallery.html
+++ b/html/gallery.html
@@ -40,15 +40,15 @@
       <h2>Build Ideas</h2>
       <!-- 3-column grid on desktop, 2 on tablets, 1 on phones -->
       <div class="grid">
-        <figure><img src="Kei-Truck-Business.jpg" alt="Small business kei truck"/><figcaption>Open a small business!</figcaption></figure>
-        <figure><img src="Kei-Truck-Camp.jpg"  alt="Camping Kei Truck"/><figcaption>Get away from it all and go camping!</figcaption></figure>
-        <figure><img src="Kei-Truck-Fire.jpg" alt="Fire engine Kei Truck"/><figcaption>Fun fact: Japan can use these smaller fire engines based on Kei trucks to use in narrow or hard to reach areas!</figcaption></figure>
-        <figure><img src="Kei-Truck-Scissor.jpg" alt="Scissor lift Kei truck"/><figcaption>OSHA doesn't need to know EVERYTHING, right?</figcaption></figure>
-        <figure><img src="Kei-Truck-Snow.jpg"  alt="Kei truck modified for snow"/><figcaption>The Canadian in me breathes heavy at this...</figcaption></figure>
-        <figure><img src="Kei-Truck-Surf.jpg" alt="Surfboard rack Kei truck"/><figcaption>Surfs up!🤙🏼 (Nobody's going to actually believe that I surf.)</figcaption></figure>
-        <figure><img src="Heavy_duty_Kei_Truck.jpg" alt="Heavy duty Kei truck"/><figcaption>All-terrain means ALL terrain!</figcaption></figure>
-        <figure><img src="Drag_Kei_truck.jpg" alt="Drag racing Kei truck"/><figcaption>From 0 to 60... eventually...</figcaption></figure>
-        <figure><img src="Drift_Kei-truck.jpg" alt="Drift racing Kei truck"/><figcaption>"Do you know what DK stand for?" "Donkey Kong?" "No. Drift King"</figcaption></figure>
+        <figure><img src="../img/Kei-Truck-Business.jpg" alt="Small business kei truck"/><figcaption>Open a small business!</figcaption></figure>
+        <figure><img src="../img/Kei-Truck-Camp.jpg"  alt="Camping Kei Truck"/><figcaption>Get away from it all and go camping!</figcaption></figure>
+        <figure><img src="../img/Kei-Truck-Fire.jpg" alt="Fire engine Kei Truck"/><figcaption>Fun fact: Japan can use these smaller fire engines based on Kei trucks to use in narrow or hard to reach areas!</figcaption></figure>
+        <figure><img src="../img/Kei-Truck-Scissor.jpg" alt="Scissor lift Kei truck"/><figcaption>OSHA doesn't need to know EVERYTHING, right?</figcaption></figure>
+        <figure><img src="../img/Kei-Truck-Snow.jpg"  alt="Kei truck modified for snow"/><figcaption>The Canadian in me breathes heavy at this...</figcaption></figure>
+        <figure><img src="../img/Kei-Truck-Surf.jpg" alt="Surfboard rack Kei truck"/><figcaption>Surfs up!🤙🏼 (Nobody's going to actually believe that I surf.)</figcaption></figure>
+        <figure><img src="../img/Heavy_duty_Kei_Truck.jpg" alt="Heavy duty Kei truck"/><figcaption>All-terrain means ALL terrain!</figcaption></figure>
+        <figure><img src="../img/Drag_Kei_truck.jpg" alt="Drag racing Kei truck"/><figcaption>From 0 to 60... eventually...</figcaption></figure>
+        <figure><img src="../img/Drift_Kei-truck.jpg" alt="Drift racing Kei truck"/><figcaption>"Do you know what DK stand for?" "Donkey Kong?" "No. Drift King"</figcaption></figure>
       </div>
     </section>
   </main>
