--- a/html/index.html
+++ b/html/index.html
@@ -47,9 +47,9 @@
   </section>
   <!--Scalable image row-->
   <div class="image-row">
-    <img src="Kei-Truck2.jpg" alt="Lifted Kei truck on a beach" />
-    <img src="Kei-Truck.jpg" alt="Classic white Honda Acty Kei truck" />
-    <img src="Kei-Truck3.jpg" alt="Pink show Kei trucdk" />
+    <img src="../img/Kei-Truck2.jpg" alt="Lifted Kei truck on a beach" />
+    <img src="../img/Kei-Truck.jpg" alt="Classic white Honda Acty Kei truck" />
+    <img src="../img/Kei-Truck3.jpg" alt="Pink show Kei truck" />
   </div>
   </main>
   <footer class="site-footer">
