--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <!-- CSS -->
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="../CSS/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body id="top">
   <!--Global header and nav (Same on all pages)-->
