--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
   <main class="container">
     <section class="card about-section">
       <h2>About Me</h2>
-      <img src="../img/Me.jpg" alt="Photo of Hayden Lasher" class="profile-pic">
+      <img src="img/Me.jpg" alt="Photo of Hayden Lasher" class="profile-pic">
       <p>
         My name is Hayden Lasher. Right after high school, I joined the Marine Corps where I became an aviation ordnance systems technician (built and fixed the weaponry that went on aircrafts), then became a shooting instructor on the range for both rifle and pistol.
         I was also a wrestling coach for years, as it was a huge passion of mine. After I left the Marine corps, I recieved my 2 year degree in automotive technology from Shoreline Community College, as well as my 2 year diesel technology degree. I worked as an automotive/diesel 
