--- a/guide.html
+++ b/guide.html
@@ -112,7 +112,7 @@
         and try to get a pre purchase inspection before you buy.
       </p>
     </section>
-      <img src="img/which-Kei-truck.jpg" alt="Kei truck models" class="guide-bottom-image">
+      <img src="../img/which-Kei-truck.jpg" alt="Kei truck models" class="guide-bottom-image">
     <p class="top-link"><a href="#top">Back to top</a></p>
   </main>
   <footer class="site-footer">
