--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -22,7 +22,7 @@
     Hayden Lasher's Website
     <i class="fa-solid fa-truck-pickup fa-flip-horizontal"></i></h1>
   <nav aria-label="Main">
-    <u1 class="nav">
+    <ul class="nav">
       <li><a class="active" href="index.html">Home</a></li>
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="guide.html">Guide</a></li>
@@ -30,7 +30,7 @@
       <!--External link opens in a NEW TAB-->
       <li>
 <a href="https://en.wikipedia.org/wiki/Kei_truck"
-   target="_blank" rel="nonopener noreferrer">What is a Kei Truck?</a></li></u1></nav></header>
+   target="_blank" rel="noopener noreferrer">What is a Kei Truck?</a></li></ul></nav></header>
 <main class="container">
   <p class="lead">Let me introduce to you... The Kei Truck!</p>
 <section class="card" id="one">
