--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
       <p>
         My name is Hayden Lasher. Right after high school, I joined the Marine Corps where I became an aviation ordnance systems technician (built and fixed the weaponry that went on aircrafts), then became a shooting instructor on the range for both rifle and pistol.
         I was also a wrestling coach for years, as it was a huge passion of mine. After I left the Marine corps, I recieved my 2 year degree in automotive technology from Shoreline Community College, as well as my 2 year diesel technology degree. I worked as an automotive/diesel 
-        mechanic for a few years before I wanted to continue my education. More recently, in 2021 I started my 2 year welding degree from Green River Community College.
+        mechanic for a few years before I wanted to continue my education. More recently, in 2021 I started (and later finished) my 2 year welding degree from Green River Community College.
         Being a blue collar guy most of my life, my body is giving up on me, so that's why I've decided to attempt a 4 year degree for cybersecurity, here at Olympic college.
       </p>
       <h2>How I Fell in Love with Kei Trucks</h2>
